--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/polyfill": "^7.0.0",
     "apollo-server-express": "^2.3.1",
     "bcrypt": "^3.0.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
     "graphql-codegen-core": "^0.15.0",
