--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "apollo-server-express": "^2.3.1",
-    "bcrypt": "^3.0.3",
     "bson": "^4.0.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "google-auth-library": "^3.0.1",
     "graphql": "^14.0.2",
     "graphql-codegen-core": "^0.15.0",
     "graphql-tag": "^2.10.0",
