--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "weprogress-server",
-  "version": "0.0.1",
+  "description": "WeProgress Backend",
+  "version": "1.0.0",
   "private": true,
   "author": "Nicolas Pinon",
   "main": "src/server.js",
@@ -46,5 +47,6 @@
     "graphql-import": "^0.7.1",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9"
-  }
+  },
+  "license": "MIT"
 }
